--- a/Breakout/Breakout.vcxproj
+++ b/Breakout/Breakout.vcxproj
@@ -19,23 +19,25 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="source\Application.cpp" />
+    <ClCompile Include="source\Game.cpp" />
     <ClCompile Include="source\Ball_Object.cpp" />
     <ClCompile Include="source\Brick.cpp" />
     <ClCompile Include="source\Game_Level.cpp" />
     <ClCompile Include="source\Game_Object.cpp" />
     <ClCompile Include="source\Main.cpp" />
+    <ClCompile Include="source\Particle_Generator.cpp" />
     <ClCompile Include="source\Resource_Manager.cpp" />
     <ClCompile Include="source\Shader.cpp" />
     <ClCompile Include="source\Sprite_Renderer.cpp" />
     <ClCompile Include="source\Texture2D.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="source\Application.h" />
+    <ClInclude Include="source\Game.h" />
     <ClInclude Include="source\Ball_Object.h" />
     <ClInclude Include="source\Brick.h" />
     <ClInclude Include="source\Game_Level.h" />
     <ClInclude Include="source\Game_Object.h" />
+    <ClInclude Include="source\Particle_Generator.h" />
     <ClInclude Include="source\Resource_Manager.h" />
     <ClInclude Include="source\Shader.h" />
     <ClInclude Include="source\Sprite_Renderer.h" />
