--- a/Breakout/Breakout.vcxproj
+++ b/Breakout/Breakout.vcxproj
@@ -114,12 +114,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>F:\Github Projects\Breakout\Dependencies\glfw-3.2.1\include;F:\Github Projects\Breakout\Dependencies\SOIL\Simple OpenGL Image Library\src;F:\Github Projects\Breakout\Dependencies\glew-2.0.0\include;F:\Github Projects\Breakout\Dependencies\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>F:\Github Projects\Breakout\Dependencies\stb;F:\Github Projects\Breakout\Dependencies\glfw-3.2.1\include;F:\Github Projects\Breakout\Dependencies\SOIL\Simple OpenGL Image Library\src;F:\Github Projects\Breakout\Dependencies\glew-2.0.0\include;F:\Github Projects\Breakout\Dependencies\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>GLEW_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>glew32s.lib;opengl32.lib;SOIL.lib;glfw3.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>F:\Github Projects\Breakout\Dependencies\glfw-3.2.1\lib;F:\Github Projects\Breakout\Dependencies\SOIL\Simple OpenGL Image Library\lib;F:\Github Projects\Breakout\Dependencies\glew-2.0.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glew32s.lib;opengl32.lib;glfw3.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>F:\Github Projects\Breakout\Dependencies\glfw-3.2.1\lib;F:\Github Projects\Breakout\Dependencies\glew-2.0.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <ShowProgress>NotSet</ShowProgress>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -142,14 +143,15 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>F:\Github Projects\Breakout\Dependencies\glfw-3.2.1\include;F:\Github Projects\Breakout\Dependencies\SOIL\Simple OpenGL Image Library\src;F:\Github Projects\Breakout\Dependencies\glew-2.0.0\include;F:\Github Projects\Breakout\Dependencies\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>F:\Github Projects\Breakout\Dependencies\stb;F:\Github Projects\Breakout\Dependencies\glfw-3.2.1\include;F:\Github Projects\Breakout\Dependencies\SOIL\Simple OpenGL Image Library\src;F:\Github Projects\Breakout\Dependencies\glew-2.0.0\include;F:\Github Projects\Breakout\Dependencies\glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>GLEW_STATIC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>glew32s.lib;opengl32.lib;SOIL.lib;glfw3.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>F:\Github Projects\Breakout\Dependencies\glfw-3.2.1\lib;F:\Github Projects\Breakout\Dependencies\SOIL\Simple OpenGL Image Library\lib;F:\Github Projects\Breakout\Dependencies\glew-2.0.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>glew32s.lib;opengl32.lib;glfw3.lib;glu32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>F:\Github Projects\Breakout\Dependencies\glfw-3.2.1\lib;F:\Github Projects\Breakout\Dependencies\glew-2.0.0\lib\Release\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <ShowProgress>NotSet</ShowProgress>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
