--- a/Breakout/Breakout.vcxproj
+++ b/Breakout/Breakout.vcxproj
@@ -29,6 +29,7 @@
     <ClCompile Include="source\Post_Processor.cpp" />
     <ClCompile Include="source\Resource_Manager.cpp" />
     <ClCompile Include="source\Shader.cpp" />
+    <ClCompile Include="source\Sound_Manager.cpp" />
     <ClCompile Include="source\Sprite.cpp" />
     <ClCompile Include="source\Sprite_Manager.cpp" />
     <ClCompile Include="source\Texture2D.cpp" />
@@ -44,6 +45,7 @@
     <ClInclude Include="source\Post_Processor.h" />
     <ClInclude Include="source\Resource_Manager.h" />
     <ClInclude Include="source\Shader.h" />
+    <ClInclude Include="source\Sound_Manager.h" />
     <ClInclude Include="source\Sprite.h" />
     <ClInclude Include="source\Sprite_Manager.h" />
     <ClInclude Include="source\Texture2D.h" />
